# rune

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
src/rune/: cli.py
src/rune/commands/: addcmd.py  deletecmd.py  getcmd.py  listcmd.py  updatecmd.py
src/rune/encryption/: aesgcm.py  base.py  factory.py  noencryption.py
src/rune/exception/: notfounderror.py  wrongencryption.py  wrongkey.py
src/rune/internal/: add.py  delete.py  get.py  listsecrets.py  update.py
src/rune/models/: result.py  secret.py
src/rune/storage/: base.py  factory.py  local.py
src/rune/utils/: input.py  settings.py
